[gd_scene load_steps=11 format=2]

[ext_resource path="res://pomodoro/quizz.png" type="Texture" id=1]
[ext_resource path="res://Script/letras/PressStart2P.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://pomodoro/metodo-pomodoro-estudo-ciclo.jpg.png" type="Texture" id=3]
[ext_resource path="res://pomodoro/pomodoro1.png" type="Texture" id=4]
[ext_resource path="res://pomodoro/X.png" type="Texture" id=5]
[ext_resource path="res://Script/popup pomodoro.gd" type="Script" id=7]
[ext_resource path="res://pomodoro/pixil-frame-0 (3).png" type="Texture" id=8]
[ext_resource path="res://pomodoro/pixil-frame-0 (2).png" type="Texture" id=9]

[sub_resource type="Theme" id=1]

[sub_resource type="DynamicFont" id=2]
size = 30
use_filter = true
extra_spacing_top = 3
extra_spacing_bottom = 2
font_data = ExtResource( 2 )

[node name="Node2D" type="Node2D"]
script = ExtResource( 7 )

[node name="Quizz" type="Sprite" parent="."]
position = Vector2( 514, 368 )
scale = Vector2( 0.367426, 0.367426 )
texture = ExtResource( 1 )

[node name="Label" type="Label" parent="Quizz"]
margin_left = -1189.36
margin_top = -253.112
margin_right = -26.3552
margin_bottom = -11.1122
rect_scale = Vector2( 1.99793, 2.39752 )
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "O método Pomodoro, cujo nome 
vem da palavra italiana para tomate,
 busca um melhor aproveitamento 
do seu tempo, dividindo o fluxo de 
trabalho em intervalos e aumentando 
o foco entre blocos."
align = 1
valign = 1

[node name="Label3" type="Label" parent="Quizz"]
margin_left = -1200.24
margin_top = -498.059
margin_right = 749.758
margin_bottom = -387.059
rect_scale = Vector2( 1.218, 1.8 )
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 0.27451, 0.219608, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Agora que você conhece o método Pomodoro, use os tomates para 
destruir os inimigos que aparecerem em sua frente (e os ciclos do
 pomodoro para livrar suas tarefas pendentes! )"
align = 1
valign = 1

[node name="Label4" type="Label" parent="Quizz"]
margin_left = -538.884
margin_top = -117.03
margin_right = 661.116
margin_bottom = -6.03033
rect_scale = Vector2( 1.4038, 2.07458 )
focus_mode = 1
theme = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 2 )
text = "Utilize o botão Z para atirar os tomates"
align = 1
valign = 1

[node name="tabela" type="Sprite" parent="Quizz"]
position = Vector2( -19.0515, -198.679 )
scale = Vector2( 2.4971, 2.4971 )
texture = ExtResource( 3 )

[node name="Pomodoro1" type="Sprite" parent="Quizz"]
position = Vector2( -27.2163, -489.895 )
scale = Vector2( 0.550808, 0.550808 )
texture = ExtResource( 4 )

[node name="Pomodoro2" type="Sprite" parent="Quizz"]
position = Vector2( -794.718, -13.6082 )
scale = Vector2( 0.550808, 0.550808 )
texture = ExtResource( 4 )

[node name="X" type="TextureButton" parent="Quizz"]
anchor_left = -0.022
anchor_top = 0.023
anchor_right = -0.022
anchor_bottom = 0.023
margin_left = -1163.04
margin_top = -856.3
margin_right = -1112.04
margin_bottom = -805.3
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 8 )

[node name="X2" type="TextureButton" parent="Quizz"]
anchor_left = -0.022
anchor_top = 0.023
anchor_right = -0.022
anchor_bottom = 0.023
margin_left = 1134.01
margin_top = 193.926
margin_right = 1185.01
margin_bottom = 244.926
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )

[node name="X3" type="TextureButton" parent="Quizz"]
anchor_left = -0.022
anchor_top = 0.023
anchor_right = -0.022
anchor_bottom = 0.023
margin_left = 1134.01
margin_top = 193.926
margin_right = 1185.01
margin_bottom = 244.926
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )

[node name="voltar" type="TextureButton" parent="Quizz"]
anchor_left = -0.022
anchor_top = 0.023
anchor_right = -0.022
anchor_bottom = 0.023
margin_left = -1138.56
margin_top = 204.812
margin_right = -1087.56
margin_bottom = 255.812
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
flip_h = true

[node name="voltar2" type="TextureButton" parent="Quizz"]
anchor_left = -0.022
anchor_top = 0.023
anchor_right = -0.022
anchor_bottom = 0.023
margin_left = -1138.56
margin_top = 204.812
margin_right = -1087.56
margin_bottom = 255.812
rect_scale = Vector2( 2, 2 )
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 8 )
flip_h = true

[connection signal="pressed" from="Quizz/X" to="." method="_on_X_pressed"]
[connection signal="pressed" from="Quizz/X2" to="." method="_on_X2_pressed"]
[connection signal="pressed" from="Quizz/X3" to="." method="_on_X3_pressed"]
[connection signal="pressed" from="Quizz/voltar" to="." method="_on_voltar_pressed"]
[connection signal="pressed" from="Quizz/voltar2" to="." method="_on_voltar2_pressed"]
